Fixed horizontal overflow

--- a/css/less/custom/post.less
+++ b/css/less/custom/post.less
@@ -15,16 +15,9 @@ POST
 		}
 	}
 	
-	/* Center the post loop when the banner is hidden */
 	@media (max-width: @wrap-max-width-min) {
 		#post-loop {
-			position: absolute;
-			left: 50%;
-		}
-
-		#post-loop-wrap {
-			position: relative;
-			left: -50%;
+			margin: 0 auto;
 		}
 	}
 	
